coverflow now clickable and fixed its margin

--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,5 +1,3 @@
-.cont {
-}
 .title {
   color: #66fcf1;
   font-weight: 600;
@@ -44,7 +42,6 @@ a {
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-  /* styles for extra small devices */
   .title {
     font-size: 30px;
     line-height: 1.4;
@@ -52,13 +49,12 @@ a {
   }
 
   .middle {
-    margin: 80px 80px;
+    margin: 80px 30px;
   }
 }
 
 /* Small devices (portrait tablets and large phones, 601px to 768px) */
 @media only screen and (max-width: 768px) {
-  /* styles for small devices */
   .slideCont {
     display: none;
   }
